--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -546,7 +546,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Ecrivez un résumé en 50 mots qui résume [sujet ou mot-clé]",
 	"Yesterday": "Hier",
 	"You": "Vous",
-	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
+	"You can personalize your interactions with LLMs by adding memories through the Manage button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "Vous ne pouvez pas cloner un modèle de base",
 	"You have no archived conversations.": "Vous n'avez pas de conversations archivées",
 	"You have shared this chat": "Vous avez partagé ce chat",
