--- a/src/lib/i18n/locales/uk-UA/translation.json
+++ b/src/lib/i18n/locales/uk-UA/translation.json
@@ -12,7 +12,7 @@
 	"a user": "користувача",
 	"About": "Про програму",
 	"Account": "Обліковий запис",
-	"Account Activation Pending": "Активація облікового запису очікує на розгляд",
+	"Account Activation Pending": "Очікування активації облікового запису",
 	"Accurate information": "Точна інформація",
 	"Active Users": "Активні користувачі",
 	"Add": "Додати",
@@ -547,7 +547,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Напишіть стислий зміст у 50 слів, який узагальнює [тема або ключове слово].",
 	"Yesterday": "Вчора",
 	"You": "Ви",
-	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "Ви можете персоналізувати свою взаємодію з LLM, додавши спогади за допомогою кнопки «Керувати» нижче, що зробить їх більш корисними та пристосованими до вас.",
+	"You can personalize your interactions with LLMs by adding memories through the Manage button below, making them more helpful and tailored to you.": "Ви можете налаштувати ваші взаємодії з мовними моделями, додавши спогади через кнопку Керувати, що зробить моделі більш корисними та персоналізованими для вас.",
 	"You cannot clone a base model": "Базову модель не можна клонувати",
 	"You have no archived conversations.": "У вас немає архівованих розмов.",
 	"You have shared this chat": "Ви поділилися цим чатом",
